[fix] layout width height wrap

--- a/Client/ClientApp/src/components/Drawing.module.scss
+++ b/Client/ClientApp/src/components/Drawing.module.scss
@@ -1,6 +1,12 @@
 ﻿.header {
   display: flex;
 
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
   &__navbar {
     display: flex;
     position: fixed;
@@ -92,14 +98,17 @@
 
 .main {
   display: flex;
+  width: 100%;
+  height: 100%;
 }
 .main__content {
   display: flex;
   justify-content: center;
   flex: 0 0 100%;
-  height: 95vh;
+  height: 100vh;
   align-items: flex-end;
   flex-direction: row;
+  padding-left: 5px;
 }
 .col {
   display: flex;
@@ -113,12 +122,6 @@
   align-items: center;
 }
 
-.main__header {
-}
-.block {
-  justify-content: space-between;
-  height: 100%;
-}
 .canvas__button {
   justify-content: space-between;
 }
@@ -156,8 +159,4 @@
 }
 
 @media screen and (max-width: 1480px) {
-  .main__content {
-    justify-content: flex-start;
-    padding-left: 5px;
-  }
 }
