--- a/Client/ClientApp/src/components/UI/Toolbar/ToolBar.module.scss
+++ b/Client/ClientApp/src/components/UI/Toolbar/ToolBar.module.scss
@@ -1,6 +1,6 @@
 .nav {
   display: flex;
-  height: 100%;
+
   background-color: white;
   width: 90px;
   align-content: center;
